--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+Sources/sandbox/Pods
+Sources/sandbox/Podfile.lock
+Sources/sandbox/Sandbox.xcworkspace
+
 ## User settings
 xcuserdata/
 
